Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-117713

[REG: 5->6] Scaling images with Qt::SmoothTransformation breaks them if scaled to smaller than 50% size

    XMLWordPrintable

Details

    • 799bfe94e (dev), a2a7da3a0 (6.6), 6e78525d8 (tqtc/lts-6.5), c658a9e61 (tqtc/lts-6.2)

    Description

      Icons easily break in Qt Quick Controls now for certain controls like ToolButton as the icon is often scaled.

      Same behavior can apparently be reproduced with QImage with SmoothTransformation. To reproduce, run attached example.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            vgt Eirik Aavitsland
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes