Fix smooth scaling of Format_Mono and Format_MonoLSB

Fixes: QTBUG-117713
Change-Id: I2fb071a4d2229da50dfacb0a92c51c3e4ea57a74
Reviewed-by: Eirik Aavitsland <eirik.aavitsland@qt.io>
(cherry picked from commit 799bfe94e8c17c0ff890c45b22d670d3bc8778c9)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit a2a7da3a028120785438f5440230241a3b0e6c19)
(cherry picked from commit 6e78525d8f33774493c27bac6fba1ccca99b8147)